# paranoid

./: .clang-format  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  CBall.cpp  CBall.hpp  CBonus.cpp  CBonus.hpp  CBrick.cpp  CBrick.hpp  CEntity.cpp  CEntity.hpp  CGameContainer.cpp  CGameContainer.hpp  CGameKeys.cpp  CGameKeys.hpp  CGameStateManager.cpp  CGameStateManager.hpp  CMakeLists.txt  CMapState.cpp  CMapState.hpp  CMenuState.cpp  CMenuState.hpp  CPaddle.cpp  CPaddle.hpp  CPlayState.cpp  CPlayState.hpp  CResourceHolder.cpp  CResourceHolder.hpp  CState.hpp  Makefile  README.md  ROADMAP.md  assets.h  main.cpp  other_functions.cpp  other_functions.hpp
.github/workflows/: ci.yml
media/stages/: 01-dragonball.txt  02-parsecode.txt  03-staircase.txt  04-inverted-staircase.txt  05-invader.txt  06-checkerboard.txt  07-fortress.txt  08-chevrons.txt  09-cage.txt  10-claude.txt  11-end.txt  README.md
packaging/: paranoid.desktop
src/: CBall.cpp  CBall.hpp  CBonus.cpp  CBonus.hpp  CBrick.cpp  CBrick.hpp  CEntity.cpp  CEntity.hpp  CGameContainer.cpp  CGameContainer.hpp  CGameStateManager.cpp  CGameStateManager.hpp  CLaser.cpp  CLaser.hpp  CMapState.cpp  CMapState.hpp  CMenu.cpp  CMenu.hpp  CMenuState.cpp  CMenuState.hpp  CMeteor.cpp  CMeteor.hpp  CPaddle.cpp  CPaddle.hpp  CPlayState.cpp  CPlayState.hpp  CResourceHolder.cpp  CResourceHolder.hpp  CStageStore.cpp  CStageStore.hpp  CStarfield.cpp  CStarfield.hpp  CState.hpp  assets.h  main.cpp  other_functions.cpp  other_functions.hpp
src/engine/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  AudioDevice.cpp  AudioDevice.hpp  BitmapFont.cpp  BitmapFont.hpp  Clock.cpp  Clock.hpp  Color.hpp  Drawable.hpp  Gamepad.cpp  Gamepad.hpp  Music.cpp  Music.hpp  Rect.hpp  Sound.cpp  Sound.hpp  SoundBuffer.cpp  SoundBuffer.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Transformable.cpp  Transformable.hpp  Vec2.hpp  Window.cpp  Window.hpp
tests/: CMakeLists.txt  animated_sprite_test.cpp  animation_test.cpp  game_smoke_test.cpp  music_test.cpp  play_state_test.cpp  rect_test.cpp  resource_holder_test.cpp  smoke_test.cpp  sound_test.cpp  sprite_test.cpp  stage_map_test.cpp  starfield_test.cpp  text_test.cpp  texture_test.cpp  vec2_test.cpp  window_test.cpp
